# framescribe

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/framescribe/: __init__.py  __main__.py  app.py  cli.py  models.py  paths.py  progress.py  reporting.py  sampling.py  skill_install.py  video.py
src/framescribe/providers/: __init__.py  base.py  codex.py
src/framescribe/skill_template/framescribe-cli/: SKILL.md
src/framescribe/skill_template/framescribe-cli/agents/: openai.yaml
tests/: test_app_progress.py  test_cli_install_skill.py  test_cli_validation.py  test_codex_provider.py  test_paths.py  test_progress.py  test_provider_invocation.py  test_reporting.py  test_sampling.py  test_skill_install.py  test_video_commands.py  test_video_extraction_contract.py
